Single Page Application Async Part

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,13 +1,14 @@
 {
-    "/js/my-vuetable.27b0d9b01b44e2c2a45f.js": "/js/my-vuetable.27b0d9b01b44e2c2a45f.js",
-    "/js/tab.574f12d12069484de1f3.js": "/js/tab.574f12d12069484de1f3.js",
-    "/js/bar-chart.748327c49591e19d092a.js": "/js/bar-chart.748327c49591e19d092a.js",
-    "/js/vuetable.8fec54ed48a38c924037.js": "/js/vuetable.8fec54ed48a38c924037.js",
-    "/js/bar.5f77c7518425f9666bad.js": "/js/bar.5f77c7518425f9666bad.js",
-    "/js/filter-bar.0ef91b89e6ab8d45f496.js": "/js/filter-bar.0ef91b89e6ab8d45f496.js",
-    "/js/detail-row.e9d7b8218e520f2795a7.js": "/js/detail-row.e9d7b8218e520f2795a7.js",
-    "/js/tab-posts.d243dfc05704ea860cd3.js": "/js/tab-posts.d243dfc05704ea860cd3.js",
-    "/js/tab-archive.de765314d673d170e139.js": "/js/tab-archive.de765314d673d170e139.js",
+    "/js/my-vuetable.dc3fd39d25e8a070df44.js": "/js/my-vuetable.dc3fd39d25e8a070df44.js",
+    "/js/tab.871be735126bb6dadf93.js": "/js/tab.871be735126bb6dadf93.js",
+    "/js/bar-chart.c57486767d976d14f243.js": "/js/bar-chart.c57486767d976d14f243.js",
+    "/js/home.feddb8530aee1d919fc8.js": "/js/home.feddb8530aee1d919fc8.js",
+    "/js/vuetable.9f2159c8268a0a5dcc23.js": "/js/vuetable.9f2159c8268a0a5dcc23.js",
+    "/js/bar.819ee280f289615c349c.js": "/js/bar.819ee280f289615c349c.js",
+    "/js/filter-bar.480796cd337ee5cea654.js": "/js/filter-bar.480796cd337ee5cea654.js",
+    "/js/detail-row.800b5c1e85a321b19f12.js": "/js/detail-row.800b5c1e85a321b19f12.js",
+    "/js/tab-posts.8d5b8c18b19badff5ba8.js": "/js/tab-posts.8d5b8c18b19badff5ba8.js",
+    "/js/tab-archive.4162defd534edd273478.js": "/js/tab-archive.4162defd534edd273478.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css"
 }
