--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-chartjs": "^3.3.1",
         "vue-content-placeholders": "^0.2.1",
         "vue-events": "^3.1.0",
+        "vue-router": "^3.0.1",
         "vuetable-2": "^1.7.5"
     }
 }
